--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scss-masterclass",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/nomadcoders/scss-masterclass",
+  "repository": "https://github.com/Yongho5580/CSS-Practice.git",
   "author": "Nicolás Serrano Arévalo <itnico.las.me@gmail.com>",
   "license": "MIT",
   "dependencies": {
